FIND_PACKAGE(Torch)

IF (TORCH_FOUND)
  MESSAGE(STATUS "Building Torch bindings")

  IF (NOT INST_LIBDIR)
    SET(INST_LIBDIR "${TORCH_LUALIB_PATH}")
  ENDIF()
  IF (NOT INST_LUADIR)
    SET(INST_LUADIR "${TORCH_LUA_PATH}")
  ENDIF()

  INCLUDE_DIRECTORIES(
    ${TORCH_INCLUDE_DIRS}
    ${TORCH_INCLUDE_DIRS}/TH
    ${TORCH_INCLUDE_DIRS}/THC
    "${CMAKE_CURRENT_SOURCE_DIR}")

  # Find cuTorch library in the torch root dir
  FIND_LIBRARY(CUTORCH_LIBRARY THC ${TORCH_ROOT}/lib)
  MARK_AS_ADVANCED(CUTORCH_LIBRARY)
  IF (NOT CUTORCH_LIBRARY)
    MESSAGE(FATAL_ERROR "cutorch (THC) library was not found!")
  ENDIF()

  ADD_LIBRARY(imgdistort MODULE binding.cc utils.c utils.h)
  TARGET_LINK_LIBRARIES(imgdistort
    affine morphology
    ${TORCH_LIBRARIES} ${CUTORCH_LIBRARY} ${GLOG_LIBRARIES})

  INSTALL(TARGETS imgdistort
    LIBRARY DESTINATION "${INST_LIBDIR}")
  INSTALL(FILES init.lua
    DESTINATION "${INST_LUADIR}/imgdistort")
ELSEIF(WITH_LUAROCKS)
  MESSAGE(FATAL_ERROR "Torch was not found!")
ENDIF()
