IF (TORCH_FOUND AND WITH_TORCH)
  IF (NOT INST_LIBDIR)
    SET(INST_LIBDIR "${TORCH_LUALIB_PATH}")
  ENDIF (NOT INST_LIBDIR)
  IF (NOT INST_LUADIR)
    SET(INST_LUADIR "${TORCH_LUA_PATH}")
  ENDIF (NOT INST_LUADIR)

  ADD_LIBRARY(imgdistort_torch MODULE
    binding.cc utils.c
    WrapAffine.h THTemplates.h utils.h)
  TARGET_LINK_LIBRARIES(imgdistort_torch
    affine_cpu_static morphology_cpu_static)
  TARGET_INCLUDE_DIRECTORIES(imgdistort_torch
    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}"
    PRIVATE "${TORCH_INCLUDE_DIRS}"
    PRIVATE "${TORCH_INCLUDE_DIRS}/TH")

  IF (CUDA_FOUND AND WITH_CUDA AND WITH_CUTORCH)
    TARGET_LINK_LIBRARIES(imgdistort_torch
      affine_gpu_static morphology_gpu_static)
    TARGET_INCLUDE_DIRECTORIES(imgdistort_torch
      PRIVATE "${TORCH_INCLUDE_DIRS}/THC"
      PRIVATE "${CUDA_INCLUDE_DIRS}")
    TARGET_COMPILE_DEFINITIONS(imgdistort_torch PRIVATE WITH_CUTORCH)
  ENDIF (CUDA_FOUND AND WITH_CUDA AND WITH_CUTORCH)

  INSTALL(TARGETS imgdistort_torch
    LIBRARY DESTINATION "${INST_LIBDIR}")
  INSTALL(FILES init.lua
    DESTINATION "${INST_LUADIR}/imgdistort")
ENDIF (TORCH_FOUND AND WITH_TORCH)
