FIND_PACKAGE(Torch)

IF (Torch_FOUND)
  MESSAGE(STATUS "Building Torch bindings")
  INCLUDE_DIRECTORIES(
    ${Torch_INSTALL_INCLUDE}
    ${Torch_INSTALL_INCLUDE}/TH
    ${Torch_INSTALL_INCLUDE}/THC
    "${CMAKE_CURRENT_SOURCE_DIR}")

  MESSAGE(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
  MESSAGE(STATUS "Torch_INSTALL_INCLUDE = ${Torch_INSTALL_INCLUDE}")
  MESSAGE(STATUS "Torch_INSTALL_LUA_PATH_SUBDIR = ${Torch_INSTALL_LUA_PATH_SUBDIR}")
  MESSAGE(STATUS "Torch_INSTALL_LUA_CPATH_SUBDIR = ${Torch_INSTALL_LUA_CPATH_SUBDIR}")

  ADD_TORCH_PACKAGE(torch_imgdistort "affine_binding.cu utils.c" "init.lua")
  TARGET_LINK_LIBRARIES(torch_imgdistort luajit luaT THC TH)
ENDIF()